--- a/free-nodes/2025-7-30-free-subscribe-node.htm
+++ b/free-nodes/2025-7-30-free-subscribe-node.htm
@@ -152,6 +152,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-7-29-free-subscribe-node.htm">7月29日→19.7M/S|2025年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-7-31-clash-node-daily-updates.htm">7月31日→18M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -180,16 +181,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-25-shadowrocket-node.htm" title="7月25日→21M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">7月25日→21M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-v2ray-subscribe.htm" title="6月10日→23M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">6月10日→23M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-1-free-ssr-subscribe.htm" title="7月1日→19M/S|2025年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">7月1日→19M/S|2025年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-28-free-high-speed-nodes.htm" title="7月28日→19.2M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">7月28日→19.2M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-15-free-clash.htm" title="7月15日→18.2M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">7月15日→18.2M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-12-shadowrocket-node.htm" title="6月12日→20.7M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">6月12日→20.7M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-20-free-clash.htm" title="7月20日→22.5M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">7月20日→22.5M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-27-free-high-speed-nodes.htm" title="6月27日→22.6M/S|2025年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">6月27日→22.6M/S|2025年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-6-free-clash-subscribe.htm" title="7月6日→20.8M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">7月6日→20.8M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-17-clash-node.htm" title="7月17日→21.3M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">7月17日→21.3M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-29-node-share.htm" title="6月29日→21M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">6月29日→21M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-23-free-v2ray.htm" title="7月23日→20.7M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">7月23日→20.7M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-4-free-high-speed-nodes.htm" title="7月4日→20.3M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">7月4日→20.3M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-20-free-v2ray.htm" title="6月20日→21.3M/S|2025年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">6月20日→21.3M/S|2025年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-22-free-clash.htm" title="6月22日→20M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">6月22日→20M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-24-clash-v2ray-ss-ssr.htm" title="6月24日→21.7M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">6月24日→21.7M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-22-clash-windows.htm" title="7月22日→18.9M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">7月22日→18.9M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-26-clash-node-daily-updates.htm" title="6月26日→21.7M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">6月26日→21.7M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -201,7 +202,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
