--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -542,15 +542,15 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-26-shadowrocket-node.htm" title="7月26日→21M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">7月26日→21M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-9-clash-node.htm" title="7月9日→21M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">7月9日→21M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-30-shadowrocket-node.htm" title="6月30日→21.9M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐">6月30日→21.9M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-30-free-subscribe-node.htm" title="7月30日→22.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">7月30日→22.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-2-free-clash-subscribe.htm" title="8月2日→22M/S|2025年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址，便宜机场推荐">8月2日→22M/S|2025年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-24-clash-v2ray-ss-ssr.htm" title="6月24日→21.7M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">6月24日→21.7M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-18-free-node-subscribe.htm" title="6月18日→18.3M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">6月18日→18.3M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-22-clash-windows.htm" title="7月22日→18.9M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">7月22日→18.9M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-23-free-v2ray.htm" title="7月23日→20.7M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">7月23日→20.7M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-21-free-v2ray.htm" title="7月21日→21.5M/S|2025年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">7月21日→21.5M/S|2025年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-15-shadowrocket-node.htm" title="6月15日→18.8M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐">6月15日→18.8M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-29-free-subscribe-node.htm" title="7月29日→19.7M/S|2025年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">7月29日→19.7M/S|2025年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-24-free-v2ray-subscribe.htm" title="7月24日→21.2M/S|2025年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">7月24日→21.2M/S|2025年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-28-free-high-speed-nodes.htm" title="7月28日→19.2M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">7月28日→19.2M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-17-clash-node.htm" title="7月17日→21.3M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">7月17日→21.3M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-9-clash-node.htm" title="7月9日→21M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">7月9日→21M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-28-free-v2ray.htm" title="6月28日→21M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">6月28日→21M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
@@ -563,7 +563,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
