yi jian ce su gan zhi wang luo fen duan zhi liang yi jian you hua bao zhang Wi Fi shi ke tong chang tong

--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -156,16 +156,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-node-subscribe-links.htm" title="8月31日→23M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">8月31日→23M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-14-free-node-subscribe.htm" title="8月14日→19.3M/S|2025年最新免费节点Clash节点/SSR/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐">8月14日→19.3M/S|2025年最新免费节点Clash节点/SSR/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→20.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">8月21日→20.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-free-ssr-subscribe.htm" title="8月12日→21.4M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">8月12日→21.4M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="9月1日→19.5M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月1日→19.5M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-free-ssr-node.htm" title="9月5日→18.6M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">9月5日→18.6M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-ssr-subscribe.htm" title="9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新">9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-18-free-node-subscribe.htm" title="8月18日→22.3M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">8月18日→22.3M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share-links.htm" title="9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-shadowrocket-node.htm" title="8月19日→20.7M/S|2025年最新免费节点SSR/Clash节点/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐">8月19日→20.7M/S|2025年最新免费节点SSR/Clash节点/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-clash-node.htm" title="9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新">9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-10-clash-node.htm" title="8月10日→22.4M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">8月10日→22.4M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-shadowrocket-node.htm" title="9月3日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">9月3日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share.htm" title="9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-23-free-v2ray-subscribe.htm" title="9月23日→21.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接地址，便宜机场推荐">9月23日→21.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-13-free-high-speed-nodes.htm" title="8月13日→22.5M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">8月13日→22.5M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-subscribe-node.htm" title="9月30日→19.3M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">9月30日→19.3M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-free-high-speed-nodes.htm" title="8月15日→22.3M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">8月15日→22.3M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-free-ssr-node.htm" title="9月17日→18.9M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月17日→18.9M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -177,7 +177,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
