--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→20.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">8月21日→20.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-clash-node-daily-updates.htm" title="8月23日→21.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">8月23日→21.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-free-ssr-subscribe.htm" title="8月12日→21.4M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">8月12日→21.4M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-ssr-subscribe.htm" title="9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新">9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-shadowrocket-node.htm" title="9月3日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">9月3日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-free-ssr-node.htm" title="9月2日→21.9M/S|2025年最新免费节点SSR/Shadowrocket节点/Clash节点/V2ray订阅链接地址，便宜机场推荐">9月2日→21.9M/S|2025年最新免费节点SSR/Shadowrocket节点/Clash节点/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-free-node-subscribe-links.htm" title="9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-5-free-node-subscribe-links.htm" title="8月5日→19.4M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">8月5日→19.4M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-free-high-speed-nodes.htm" title="9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-7-shadowrocket-node.htm" title="8月7日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">8月7日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-free-clash.htm" title="9月28日→18.1M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐">9月28日→18.1M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-clash.htm" title="9月16日→22.1M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月16日→22.1M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-free-high-speed-nodes.htm" title="8月15日→22.3M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">8月15日→22.3M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-free-node-subscribe.htm" title="8月14日→19.3M/S|2025年最新免费节点Clash节点/SSR/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐">8月14日→19.3M/S|2025年最新免费节点Clash节点/SSR/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-1-free-ssr-subscribe.htm" title="10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐">10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-clash-node.htm" title="9月29日→22.2M/S|2025年最新免费节点SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐">9月29日→22.2M/S|2025年最新免费节点SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-ssr-node.htm" title="9月12日→18.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月12日→18.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-shadowrocket-node.htm" title="9月14日→22M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">9月14日→22M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-16-node-share-links.htm" title="8月16日→21.9M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">8月16日→21.9M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-shadowrocket-node.htm" title="9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
