--- a/free-nodes/2025-9-23-free-v2ray-subscribe.htm
+++ b/free-nodes/2025-9-23-free-v2ray-subscribe.htm
@@ -181,16 +181,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-5-free-node-subscribe-links.htm" title="8月5日→19.4M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">8月5日→19.4M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-17-free-ssr-node.htm" title="9月17日→18.9M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月17日→18.9M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-free-ssr-node.htm" title="9月2日→21.9M/S|2025年最新免费节点SSR/Shadowrocket节点/Clash节点/V2ray订阅链接地址，便宜机场推荐">9月2日→21.9M/S|2025年最新免费节点SSR/Shadowrocket节点/Clash节点/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-shadowrocket-node.htm" title="8月7日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">8月7日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-4-node-share.htm" title="9月4日→22.4M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月4日→22.4M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-node-share.htm" title="8月29日→20.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">8月29日→20.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-20-clash-node-daily-updates.htm" title="8月20日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">8月20日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-free-high-speed-nodes.htm" title="9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-high-speed-nodes.htm" title="9月6日→21.5M/S|2025年最新免费节点SSR/V2ray节点/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月6日→21.5M/S|2025年最新免费节点SSR/V2ray节点/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-shadowrocket-node.htm" title="8月19日→20.7M/S|2025年最新免费节点SSR/Clash节点/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐">8月19日→20.7M/S|2025年最新免费节点SSR/Clash节点/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→20.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">8月21日→20.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-1-free-ssr-subscribe.htm" title="10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐">10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-clash-node-daily-updates.htm" title="9月19日→19.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月19日→19.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share-links.htm" title="9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-node-subscribe.htm" title="9月8日→21.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月8日→21.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-30-shadowrocket-node.htm" title="8月30日→18.8M/S|2025年最新免费节点Shadowrocket节点/SSR/V2ray节点/Clash订阅链接地址，便宜机场推荐">8月30日→18.8M/S|2025年最新免费节点Shadowrocket节点/SSR/V2ray节点/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-6-free-shadowrocket-node.htm" title="8月6日→20.5M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">8月6日→20.5M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-free-node-subscribe.htm" title="8月18日→22.3M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">8月18日→22.3M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -202,7 +202,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
