--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -123,6 +123,90 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2025-08-12">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-8-12-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/c38971d27f34eb1a1231acac753c4fee.webp" alt="8月12日→21.4M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-8-12-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">8月12日→21.4M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了加拿大、香港、美国、韩国、欧洲、新加坡、日本等地区,最高速度可达21.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-08-11">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-8-11-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="8月11日→18.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-8-11-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">8月11日→18.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、加拿大、美国、新加坡、欧洲、韩国、日本等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-08-10">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-8-10-clash-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/c38971d27f34eb1a1231acac753c4fee.webp" alt="8月10日→22.4M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-8-10-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">8月10日→22.4M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、香港、加拿大、美国、日本、欧洲、新加坡等地区,最高速度可达22.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-08-09">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-8-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7f7309e6b17f9cbb639a778e73fc546c.webp" alt="8月9日→19.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-8-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">8月9日→19.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、美国、加拿大、欧洲、日本、新加坡、韩国等地区,最高速度可达19.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-08-08">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-8-8-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/e257e01abd056413997dc08bd6b623fb.webp" alt="8月8日→21.7M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-8-8-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">8月8日→21.7M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了加拿大、日本、香港、韩国、新加坡、欧洲、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-08-07">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-8-7-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/cf4b7d70d0b73f0bfc03a06c4aff020d.webp" alt="8月7日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-8-7-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">8月7日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、日本、欧洲、新加坡、加拿大、香港、美国等地区,最高速度可达22.8 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2025-08-06">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2025-8-6-free-shadowrocket-node.htm" class="xcblog-blog-url">
@@ -175,16 +259,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-clash-node-daily-updates.htm" title="8月28日→18.8M/S|2025年最新免费节点Clash节点/SSR/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐">8月28日→18.8M/S|2025年最新免费节点Clash节点/SSR/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-node-subscribe.htm" title="9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐">9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-v2ray-subscribe.htm" title="8月27日→21.7M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">8月27日→21.7M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-free-ssr-node.htm" title="9月5日→18.6M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">9月5日→18.6M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-node-subscribe-links.htm" title="8月9日→19.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">8月9日→19.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-node-share-links.htm" title="8月16日→21.9M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">8月16日→21.9M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-v2ray-ss-ssr.htm" title="8月17日→21.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR订阅链接地址，便宜机场推荐">8月17日→21.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-ssr-node.htm" title="9月12日→18.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月12日→18.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-clash.htm" title="9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-8-free-shadowrocket-node.htm" title="8月8日→21.7M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">8月8日→21.7M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-node-share.htm" title="8月29日→20.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">8月29日→20.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-subscribe-node.htm" title="9月30日→19.3M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">9月30日→19.3M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-18-shadowrocket-node.htm" title="9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-ssr-subscribe.htm" title="9月9日→18.2M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月9日→18.2M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-ssr-subscribe.htm" title="9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新">9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share.htm" title="9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→20.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">8月21日→20.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-11-free-ssr-subscribe.htm" title="8月11日→18.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">8月11日→18.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share-links.htm" title="9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -196,7 +280,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
