--- a/free-nodes/2025-10-10-shadowrocket-node.htm
+++ b/free-nodes/2025-10-10-shadowrocket-node.htm
@@ -184,16 +184,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-free-clash.htm" title="9月28日→18.1M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐">9月28日→18.1M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-shadowrocket-node.htm" title="9月14日→22M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">9月14日→22M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-free-node-subscribe.htm" title="10月9日→22.6M/S|2025年最新免费节点V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">10月9日→22.6M/S|2025年最新免费节点V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-ssr-subscribe.htm" title="9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新">9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share.htm" title="9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share-links.htm" title="9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-19-free-v2ray-subscribe.htm" title="10月19日→22.8M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐">10月19日→22.8M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-free-node-subscribe-links.htm" title="9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-clash.htm" title="9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-2-free-v2ray-subscribe.htm" title="10月2日→22.7M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐">10月2日→22.7M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-free-v2ray-subscribe.htm" title="10月6日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">10月6日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-29-clash-node.htm" title="9月29日→22.2M/S|2025年最新免费节点SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐">9月29日→22.2M/S|2025年最新免费节点SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-shadowrocket-node.htm" title="9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-node-subscribe.htm" title="9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐">9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-clash-subscribe.htm" title="10月7日→21.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">10月7日→21.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-clash-node.htm" title="9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新">9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-5-clash-node-daily-updates.htm" title="10月5日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">10月5日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-clash.htm" title="9月16日→22.1M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月16日→22.1M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-free-v2ray.htm" title="10月3日→19.1M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">10月3日→19.1M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -205,7 +205,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
